--- a/src/assets/fonts/aamc/demo.html
+++ b/src/assets/fonts/aamc/demo.html
@@ -9,14 +9,42 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> aamc <small class="fgc1">(Glyphs:&nbsp;16)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> aamc <small class="fgc1">(Glyphs:&nbsp;18)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
+                <span class="icon-qiu"></span>
+                <span class="mls"> icon-qiu</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e910" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe910;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
                 <span class="icon-telegram"></span>
                 <span class="mls"> icon-telegram</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e911" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe911;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-discord"></span>
+                <span class="mls"> icon-discord</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e90f" class="unit size1of2" />
