--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="keywords" content="NFT,crypto,GameFi,launchpad,Popfun,popfunko">
-    <meta name="description" content="Popfun | NFT marketplace crypt、NFT marketplace website、blockchain game development">
+    <meta name="description" content="Popfun | NFT marketplace crypto、NFT marketplace website、blockchain game development">
     <meta property="og:url" content="https://www.pop.fun/">
-    <meta property="og:title" content="Popfun | NFT marketplace crypt、NFT marketplace website、blockchain game development">
-    <meta property="og:description" content="Popfun | NFT marketplace crypt、NFT marketplace website、blockchain game development">
+    <meta property="og:title" content="Popfun | NFT marketplace crypto、NFT marketplace website、blockchain game development">
+    <meta property="og:description" content="Popfun | NFT marketplace crypto、NFT marketplace website、blockchain game development">
     <title>Popfun | NFT marketplace crypt、NFT marketplace website、blockchain game development</title>
 </head>
 
